--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,9 +1,58 @@
+iframe {
+  position: fixed;
+  top: 30px;
+  left: 0px;
+  width: 100%;
+  height:100%;
+}
+
+.container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background-color: #cccccc;
+}
+
+.left {
+  position: absolute;
+  padding-top: 4px;
+  background-color: #f82424f1;
+  left: 0px;
+  top: 0px;
+  width: 50%;
+  height: 30px;
+  color: white;
+  font-size: large;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+}
+
+.right {
+  position: absolute;
+  padding-top: 4px;
+  background-color: #28ffe2d9;
+  right: 0px;
+  top: 0px;
+  width: 50%;
+  height: 30px;
+  color: white;
+  font-size: large;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+}
+
 /* Footer */
 .footer {
-    background-color: lightgreen;
+    background-color: rgb(121, 121, 121);
+    color: white;
     padding: 10px 0px;
     position: fixed;
     left: 0px;
     bottom: 0px;
     width: 100%;
+    span {
+      padding: 0px 10px;
+    }
   }
