--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,9 +1,16 @@
-iframe {
+.main {
   position: fixed;
   top: 30px;
   left: 0px;
   width: 100%;
   height:100%;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  span {
+    position: relative;
+    top: 30%;
+  }
 }
 
 .container {
